# nml

./: Cargo.toml  README.md  todo
assess/: test.nml
docs/spec/: syntax.abnf  tentative.md
editor/code/: language-configuration.json  package-lock.json  package.json  snippets.json  tsconfig.json
editor/code/src/: main.ts
nml-compiler/: Cargo.toml
nml-compiler/src/: errors.rs  lib.rs  names.rs  source.rs  topology.rs
nml-compiler/src/messages/: names.rs  parse.rs  tyck.rs
nml-compiler/src/parse/: cst.rs  mod.rs  tokens.rs
nml-compiler/src/parse/abstractify/: expr.rs  items.rs  lambda.rs  mod.rs  pattern.rs  types.rs
nml-compiler/src/parse/parser/: lambda.rs  mod.rs  things.rs
nml-compiler/src/resolve/: declare.rs  dependencies.rs  expr.rs  mod.rs  operators.rs  pattern.rs  types.rs
nml-compiler/src/resolve/declare/: mod.rs
nml-compiler/src/resolve/patterns/: mod.rs
nml-compiler/src/resolve/resolve/: mod.rs
nml-compiler/src/trees/: declared.rs  inferred.rs  mod.rs  nodes.rs  parsed.rs  resolved.rs
nml-compiler/src/trees/declared/: mod.rs  patterns.rs  spined.rs
nml-compiler/src/tyck/: infer.rs  lower.rs  mod.rs  pattern.rs  types.rs
nml-compiler/src/tyck/infer/: expr.rs  mod.rs  pattern.rs
nml-compiler/src/tyck/pretty/: mod.rs
nml-compiler/src/tyck/solve/: apply.rs  generalize.rs  instantiate.rs  minimize.rs  mod.rs  rows.rs  unify.rs  vars.rs
nml-compiler/src/tyck/tests/: generalize.rs  mod.rs  rows.rs  sums.rs
soml-compiler/: Cargo.toml
soml-compiler/src/: errors.rs  lib.rs  names.rs  source.rs
soml-compiler/src/messages/: mod.rs  names.rs  parse.rs  tyck.rs
soml-compiler/src/parse/: mod.rs
soml-compiler/src/parse/abstractify/: items.rs
soml-compiler/src/parse/parser/: mod.rs
soml-compiler/src/resolve/: mod.rs
soml-compiler/src/trees/: parsed.rs  resolved.rs
soml-compiler/src/tyck/: infer.rs  memory.rs  mod.rs  tree.rs  types.rs
soml-compiler/src/tyck/pretty/: mod.rs
soml-compiler/src/tyck/solve/: mod.rs  rows.rs  vars.rs
soml-compiler/src/tyck/tests/: generalize.rs  mod.rs  rows.rs  sums.rs
src/: args.rs  lib.rs  main.rs
src/batch/: mod.rs
src/frontend/: errors.rs  literals.rs  mod.rs  names.rs  topology.rs
src/frontend/messages/: mod.rs  names.rs  parse.rs  tyck.rs
src/frontend/parse/: cst.rs  mod.rs  tokens.rs
src/frontend/resolve/: dependencies.rs  expr.rs  mod.rs  operators.rs  pattern.rs  types.rs
src/frontend/trees/: inferred.rs  mod.rs  (+3 more)
src/lsp/: check.rs  diagnostics.rs  inlay_hints.rs  log.rs  lsp_error.rs  mod.rs  sync.rs
src/modules/: identifier.rs  mod.rs
src/syntax/: mod.rs
(+52 files in other folders)
