[workspace]
members = ["nml-compiler"]

[package]
name = "nmlc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nml-compiler = { path = "nml-compiler" }

anyhow = "1.0"
crossbeam = "0.8"
clap = { version = "4.3", features = ["derive"] }
log = "0.4"
lsp-document = "0.6"
lsp-server = "0.7"
lsp-types = "0.94"
serde = "1.0"
serde_json = "1.0"
