[workspace]
members = []

[package]
name = "nmlc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1"
crossbeam-channel = "0.5"
log = "0.4"
lsp-document = "0.6"
lsp-server = "0.7"
lsp-types = "0.94"
simple_logger = { version = "4.2", default-features = false }
serde = "1.0"
serde_json = "1.0"

# nml-compiler
bumpalo = { version = "3.13", features = ["collections"] }
dashmap = "5.5"
internment = { version = "0.7", default-features = false, features = ["arena"] }
logos = "0.13"
malachite = "0.3"

[dev-dependencies]
pretty_env_logger = "0.5"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
