[package]
name = "nml-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = { version = "3.13", features = ["collections"] }
dashmap = "5.5"
internment = { version = "0.7", default-features = false, features = ["arena"] }
log = "0.4"
logos = "0.13"
malachite = "0.3"

[dev-dependencies]
pretty_env_logger = "0.5"
