[package]
name = "soml-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.5"
lasso = { version = "0.7", features = ["multi-threaded"] }
log = "0.4"
malachite = "0.3"
typed-arena = "2.0"

[dev-dependencies]
pretty_env_logger = "0.5"
